[package]
name = "rplace_util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
log = "0.4.16"
env_logger = "0.9.0"
serde = { version = "1.0.136", features = ["derive"] }
config = "0.13.1"
crossbeam-channel = "0.5.4"
crossbeam-utils = "0.8.8"
num_cpus = "1.13.1"
time = { version = "0.3.9", features = ["macros", "serde-human-readable", "serde"] }