[package]
name = "rplace_util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
log = "0.4.16"
env_logger = "0.9.0"
serde = { version = "1.0.136", features = ["derive"] }
config = "0.13.1"
rayon = "1.5.2"
time = { version = "0.3.9", features = ["macros", "serde-human-readable", "serde"] }