[package]
name = "rplace_util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
log = "0.4.16"
env_logger = "0.10.0"
serde = { version = "1.0.164", features = ["derive"] }
config = "0.13.3"
rayon = "1.7.0"
time = { version = "0.3.22", features = ["macros", "serde-human-readable", "serde"] }